--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/musicplayer?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/musicplayer
+//?useSSL=false
+//?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = <YOur Password HEre>
 
